--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jade": "~1.9.2",
     "morgan": "~1.5.1",
     "serve-favicon": "~2.2.0",
-    "socket.io": ""
+    "socket.io": "",
+    "xss": "^0.1.21"
   }
 }
